# ai_action

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  errors.py  main.py  mcp_knowledge_server.py  opencode.json  pyproject.toml  skills-lock.json  sub-agent-test-log.md
.github/workflows/: ci.yml
.opencode/agents/: analyzer.md  collector.md  organizer.md
.opencode/plugins/: validate.ts
.opencode/skills/github-trending/: SKILL.md
.opencode/skills/github-trending/scripts/: config.json  parse_trending.py
.opencode/skills/paper-ai/: SKILL.md
.opencode/skills/tech-summary/: SKILL.md
hooks/: check_quality.py  validate_json.py
pipeline/: model_client.py  pipeline.py  rss_sources.yaml
specs/: coding-standards.md  do.md  github-trending-skill.md
utils/: github_api.py
