[project]
name = "ai-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["ai_action"]

[tool.pytest.ini_options]
addopts = "--cov=ai_action --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.black]
target-version = ["py312"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
